# rp2040-freertos-template

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  FreeRTOSConfig.h  main.c
